fix: change singolo2.css

--- a/styles/singolo2.css
+++ b/styles/singolo2.css
@@ -177,6 +177,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    text-transform: capitalize;
     margin-top: 10px;
     letter-spacing: -0.2px;
 }
